refactor(authentication): improve service unit test
- Add missing tests
- Rename methods test to align with project conventions
- Improve test grouping and sorting